# C3

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json  xmake.lua
.github/workflows/: release.yml
config/: build-presets.json  config.json
docs/: BUILD.md  SETUP.md  build-cmake.md  build-xmake.md  build.md  setup.md
include/ScreenUploader/: ScreenUploader.h  SystemUtils.h
scripts/: cd.bat  cd.sh  ci.bat  ci.sh  download.bat  download.sh  generate-hardcoded-config.ps1  generate-hardcoded-config.sh  generate_commands.bat  generate_commands.sh  run_tests.bat  run_tests.sh
server/: .dockerignore  .env.docker  .env.example  Dockerfile  app.js  auth.js  check-security.js  client-manager.js  clients.js  clients.json  commands.js  config.js  docker-compose.yml  logger.js  middleware.js  package-lock.json  package.json  server.js  setup-auth.js  upload.js  websocket.js
server-go/: go.mod  go.sum
server-go/cmd/C3-server/: main.go
server-go/config/: config.go
server-go/internal/config/: config.go
server-go/internal/database/: db.go
server-go/internal/logger/: init.go  logger.go
server-go/internal/models/: db.go  models.go
server-go/internal/routes/: client.go
server-go/internal/services/: client.go  client_internal.go
server-go/internal/websocket/: client.go  hub.go
server-go/pkg/log/: log.go
server-go/routes/: client.go
server/database/: config.js  init.js
server/database/models/: index.js
server/doc/: auth_config.md
server/public/: app.js  index.html  login.html  style.css  terminal.html
server/public/js/: app.js
server/public/js/modules/: auth.js  client-management.js  clients.js  commands.js  delete.js  events.js  modal.js  path-utils.js  pty-terminal.js  screenshots.js  state.js  tabs.js  terminal.js  throttle.js  utils.js  websocket.js
server/public/toast/: toast.css  toast.js
server/routes/: auth.js  client.js  web.js
server/scripts/: check-security.js  reset-database.sh  test-database.js
server/services/: auth-service.js  cache-service.js  client-service.js  command-service.js  command.js  screenshot-service.js  screenshot.js
src/: CMakeLists.txt  Config.cpp  Config.h  Logger.cpp  ScreenUploader.cpp  ScreenUploader.h  Utils.cpp  Utils.h  WinMain.cpp  logger.cpp  logger.h  main.cpp  platform.cpp  xmake.lua
src/app/: C3App.cpp  CMakeLists.txt  ScreenUploaderApp.cpp  xmake.lua
src/app/include/app/: C3App.h  ScreenUploaderApp.h
src/core/: CMakeLists.txt  CommandDispatcher.cpp  Config.cpp  ControlCenter.cpp  IDGenerator.cpp  ImageEncoder.cpp  Logger.cpp  RawImage.cpp  SystemUtils.cpp  URLBuilder.cpp  UploadController.cpp  xmake.lua
src/core/include/core/: CommandDispatcher.h  Config.h  ControlCenter.h  GDIRAIIClasses.h  IDGenerator.h  ImageEncoder.h  Logger.h  PtyManager.h  RawImage.h  ScreenCapturer.h  SystemUtils.h  TerminalManager.h  URLBuilder.h  UploadController.h  X11RAIIClasses.h  core.h
src/core/include/core/platform/linux/: WlrScreenCapturer.h  X11RAIIClasses.h
src/core/include/core/platform/windows/: GDIRAIIClasses.h
src/core/platform/linux/: PtyManager.cpp  ScreenCapturer.cpp  SystemUtils.cpp  TerminalManager.cpp  WlrScreenCapturer.cpp  X11RAIIClasses.cpp
src/core/platform/windows/: GDIRAIIClasses.cpp  PtyManager.cpp  ScreenCapturer.cpp  SystemUtils.cpp  TerminalManager.cpp
src/feature/pty/: CMakeLists.txt
src/feature/pty/platform/windows/: pty.cpp
src/net/: CMakeLists.txt  CommandFetcher.cpp  URLBuilder.cpp  Uploader.cpp  WebSocketClient.cpp  xmake.lua
src/net/include/net/: CommandFetcher.h  URLBuilder.h  Uploader.h  WebSocketClient.h  net.h
src/platform/linux/: ScreenUploader.cpp  SystemUtils.cpp
src/platform/windows/: ScreenUploader.cpp  SystemUtils.cpp
test/: CMakeLists.txt  xmake.lua
test/test_pty/: CMakeLists.txt  test_pty.cpp  xmake.lua
